# NCF-Library

./: .editorconfig  .gitignore  EADLibrary.sln  NCF-Library.sln  README.md
BymlLibrary/Interop/: CMakeLists.txt
BymlLibrary/Interop/.build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
BymlLibrary/Interop/.build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  coead.sln  coead.vcxproj  coead.vcxproj.filters
BymlLibrary/Interop/.build-vs/lib/oead/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  oead.sln  oead.vcxproj  oead.vcxproj.filters  oead_res.vcxproj  oead_res.vcxproj.filters
BymlLibrary/Interop/.build-vs/lib/pkgconfig/: absl_absl_algorithm.pc  absl_absl_algorithm_container.pc  absl_absl_any.pc  absl_absl_atomic_hook.pc  absl_absl_bad_any_cast.pc  absl_absl_bad_any_cast_impl.pc  absl_absl_bad_optional_access.pc  absl_absl_bad_variant_access.pc  absl_absl_base.pc  absl_absl_base_internal.pc  absl_absl_bind_front.pc  absl_absl_bits.pc  absl_absl_btree.pc  absl_absl_city.pc  absl_absl_civil_time.pc  absl_absl_cleanup.pc  absl_absl_cleanup_internal.pc  absl_absl_compare.pc  absl_absl_compressed_tuple.pc  absl_absl_config.pc  absl_absl_container_common.pc  absl_absl_container_memory.pc  absl_absl_cord.pc  absl_absl_cord_internal.pc  (+111 more)
BymlLibrary/Interop/include/: BymlLibrary.h
BymlLibrary/Interop/src/: BymlLibrary.cpp
(+698 files in other folders)
